@@ -242,12 +242,12 @@ class ActorMigration {
 	/**
 	 * Get actor ID from UserIdentity, if it exists
 	 *
-	 * @param IDatabase $dbw
+	 * @param IDatabase $db
 	 * @param UserIdentity $user
 	 * @return int
 	 */
-	private function getExistingActorId( IDatabase $dbw, UserIdentity $user ) {
-		$row = $dbw->selectRow(
+	public function getExistingActorId( IDatabase $db, UserIdentity $user ) {
+		$row = $db->selectRow(
 			'actor',
 			[ 'actor_id' ],
 			[ 'actor_name' => $user->getName() ],
@@ -258,6 +258,61 @@ class ActorMigration {
 		}
 
 		return (int)$row->actor_id;
+	}
+
+	/**
+	 * Attempt to assign an actor ID to the given user.
+	 * If it is already assigned, return the existing ID.
+	 *
+	 * @param IDatabase $dbw
+	 * @param UserIdentity $user
+	 *
+	 * @return int The new actor ID
+	 */
+	public function getNewActorId( IDatabase $dbw, UserIdentity $user ) {
+		// TODO: inject
+		$userNameUtils = MediaWikiServices::getInstance()->getUserNameUtils();
+
+		$q = [
+			'actor_user' => $user->getId() ?: null,
+			'actor_name' => (string)$user->getName(),
+		];
+		if ( $q['actor_user'] === null && $userNameUtils->isUsable( $q['actor_name'] ) ) {
+			throw new CannotCreateActorException(
+				'Cannot create an actor for a usable name that is not an existing user: ' .
+				"user_id={$user->getId()} user_name=\"{$user->getName()}\""
+			);
+		}
+		if ( $q['actor_name'] === '' ) {
+			throw new CannotCreateActorException(
+				'Cannot create an actor for a user with no name: ' .
+				"user_id={$user->getId()} user_name=\"{$user->getName()}\""
+			);
+		}
+
+		$dbw->insert( 'actor', $q, __METHOD__, [ 'IGNORE' ] );
+
+		if ( $dbw->affectedRows() ) {
+			$actorId = (int)$dbw->insertId();
+		} else {
+			// Outdated cache?
+			// Use LOCK IN SHARE MODE to bypass any MySQL REPEATABLE-READ snapshot.
+			$actorId = (int)$dbw->selectField(
+				'actor',
+				'actor_id',
+				$q,
+				__METHOD__,
+				[ 'LOCK IN SHARE MODE' ]
+			);
+			if ( !$actorId ) {
+				throw new CannotCreateActorException(
+					"Failed to create actor ID for " .
+					"user_id={$user->getId()} user_name=\"{$user->getName()}\""
+				);
+			}
+		}
+
+		return $actorId;
 	}
 
 	/**
@@ -283,17 +338,13 @@ class ActorMigration {
 			$ret[$text] = $user->getName();
 		}
 		if ( $this->stage & SCHEMA_COMPAT_WRITE_NEW ) {
-			// UBN fix for T260485 - do not let User object to handle existing actor IDs
-			// TODO: Make User object wiki-aware and let it handle all cases.
+			// NOTE: Don't use $user->getActorId(), since that may be for the wrong wiki (T260485)
+			// TODO: Make User object wiki-aware and let it handle all cases (T260933)
 			$existingActorId = $this->getExistingActorId( $dbw, $user );
 			if ( $existingActorId !== false ) {
 				$ret[$actor] = $existingActorId;
 			} else {
-				// We need to be able to assign an actor ID if none exists
-				if ( !$user instanceof User && !$user->getActorId() ) {
-					$user = User::newFromAnyId( $user->getId(), $user->getName(), null );
-				}
-				$ret[$actor] = $user->getActorId( $dbw );
+				$ret[$actor] = $this->getNewActorId( $dbw, $user );
 			}
 		}
 		return $ret;
